<resources>
    <string name="app_name">星米影视</string>

    <string name="icon_hot_broadcast">&#xe623;</string>
    <string name="icon_movie">&#xe64c;</string>
    <string name="icon_teleplay">&#xe68e;</string>
    <string name="icon_cartoon">&#xe61c;</string>
    <string name="icon_variety">&#xe689;</string>
    <string name="icon_down">&#xe656;</string>
    <string name="icon_up">&#xe691;</string>
    <string name="icon_collect">&#xe60e;</string>
    <string name="icon_collected">&#xe601;</string>
    <string name="icon_checked">&#xe624;</string>

    <string name="icon_share_moments">&#xe709;</string>
    <string name="icon_share_wechat">&#xe640;</string>
    <string name="icon_share_qq">&#xe604;</string>
    <string name="icon_share_sina">&#xe632;</string>
    <string name="icon_share_save">&#xe643;</string>

    <string name="name_version">星米影视 v%1$s</string>
    <string name="cancel">取消</string>
    <string name="setting">去设置</string>
    <string name="title_dialog">设置权限</string>
    <string name="message_permission_always_failed">请在设置中给我们以下权限:\n\n%1$s</string>
    <string name="history_delete">删除（%1$d）</string>
    <string name="delete">删除</string>
    <string name="choose_all">全选</string>
    <string name="cancel_choose_all">取消全选</string>
    <string name="about">\u3000\u3000星米影视app提供的最新电视剧和电影资源均系收集于各大视频网站，app只提供观看服务，并不提供影片资源存储，也不参与录制、上传。若收录的节目无意侵犯了贵司版权，请给底部邮箱地址来信，我们会及时处理和回复，谢谢！侵权投诉请附带版权所属证明发至邮箱mitaxing@gmail.com。</string>
    <string name="share_from">分享自╔星米影视╝App</string>
    <string name="share_app_tip">扫描二维码，下载╔星米影视╝App</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_movie">电影</string>
    <string name="tab_teleplay">电视剧</string>
    <string name="tab_variety">综艺</string>
    <string name="tab_cartoon">动漫</string>
    <string name="tab_me">我的</string>
    <string name="back_again_exit">再按一次退出程序</string>
    <string name="tab_newest">最新</string>
    <string name="tab_hits">人气</string>
    <string name="tab_score">评分</string>
    <string name="recent_update">最近更新</string>
    <string name="historic_record">观看记录</string>
    <string name="my_download">离线缓存</string>
    <string name="local_video">本地视频</string>
    <string name="my_collect">我的收藏</string>
    <string name="share_to_friend">推荐给朋友</string>
    <string name="clear_cache">清除缓存</string>
    <string name="advice_feedback">吐个槽</string>
    <string name="info_change">设置</string>
    <string name="about_app">关于星米影视</string>
    <string name="share_app">分享应用</string>
    <string name="all_will_clear">所有缓存将会被清除(但不包括离线下载的视频)</string>
    <string name="confirm">确定</string>
    <string name="choose_head">头像挑选</string>
    <string name="tip_change_user_info">小贴士：头像和昵称的变更会在下次进入反馈生效 ~</string>
    <string name="tip_nick_length">昵称不超过8个字哦</string>
    <string name="title_enter_nick">输入昵称</string>
    <string name="tip_multi_window_enter_collect">分屏模式下，进入收藏页面视觉上会有影响，请先退出分屏模式再进入。</string>
    <string name="tip_multi_window_enter_share">分屏模式下，进入分享页面视觉上和功能会有影响，请先退出分屏模式再进入。</string>
    <string name="intro">简介</string>
    <string name="tab_aaqq">首播</string>
    <string name="tab_kk3">吉吉</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_cancel">已取消收藏</string>
    <string name="video_scale">默认比例</string>
    <string name="enter_new_version">进入新版</string>
    <string name="edit">编辑</string>
    <string name="local_video_num">共%1$d个视频</string>
    <string name="cache_size_tip">已缓存%1$s，剩余%2$s可用</string>
    <string name="caching">正在缓存</string>
    <string name="flow_tip">流量提示</string>
    <string name="flow_tip_message">当前正使用数据流量，是否继续缓存视频？</string>
    <string name="status_add_download">成功加入下载队列</string>
    <string name="status_has_download">请勿重复添加</string>
    <string name="cache_video_num">已缓存%1$d个视频</string>
    <string name="program">节目单</string>
    <string name="current_tv">当前投射的电视：%1$s</string>
</resources>
