<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_pop_update_bg"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textColor="@color/black_2c"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_app_name"
            app:layout_constraintStart_toEndOf="@id/tv_app_name"
            tools:text="v1.2.1" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_install"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <TextView
                android:id="@+id/tv_update_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:lineSpacingExtra="12dp"
                android:textColor="@color/black_2c"
                android:textSize="18dp" />

        </android.support.v4.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_install"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/enter_new_version"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_99"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_install" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>