<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gap">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <com.xing.mita.movie.view.IconFontView
            android:id="@+id/ifv_boundary"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="&#xe80c;"
            android:textColor="@color/color_gap"
            android:textSize="412dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/icon_logo"
            app:layout_constraintBottom_toTopOf="@id/tv_version"
            app:layout_constraintEnd_toEndOf="@id/ifv_boundary"
            app:layout_constraintStart_toStartOf="@id/ifv_boundary"
            app:layout_constraintTop_toTopOf="@id/ifv_boundary" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_version"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@id/ifv_boundary"
            app:layout_constraintEnd_toEndOf="@id/ifv_boundary"
            app:layout_constraintStart_toStartOf="@id/ifv_boundary"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/historic_record"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/ifv_boundary" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe603;"
            android:textColor="@color/color_66"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_history"
            app:layout_constraintStart_toStartOf="@id/tv_history"
            app:layout_constraintTop_toTopOf="@id/tv_history" />

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/my_download"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_history" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe62e;"
            android:textColor="@color/color_66"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_download"
            app:layout_constraintStart_toStartOf="@id/tv_download"
            app:layout_constraintTop_toTopOf="@id/tv_download" />

        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/my_collect"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_download" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe61b;"
            android:textColor="@color/color_66"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_collect"
            app:layout_constraintStart_toStartOf="@id/tv_collect"
            app:layout_constraintTop_toTopOf="@id/tv_collect" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/share_to_friend"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_collect" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe690;"
            android:textColor="@color/color_66"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_share"
            app:layout_constraintStart_toStartOf="@id/tv_share"
            app:layout_constraintTop_toTopOf="@id/tv_share" />

        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/clear_cache"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share" />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:textColor="@color/color_66"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
            app:layout_constraintEnd_toEndOf="@id/tv_clear_cache"
            app:layout_constraintTop_toTopOf="@id/tv_clear_cache" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe616;"
            android:textColor="@color/color_66"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
            app:layout_constraintStart_toStartOf="@id/tv_clear_cache"
            app:layout_constraintTop_toTopOf="@id/tv_clear_cache" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/advice_feedback"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_clear_cache" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe649;"
            android:textColor="@color/color_66"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_feedback"
            app:layout_constraintStart_toStartOf="@id/tv_feedback"
            app:layout_constraintTop_toTopOf="@id/tv_feedback" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="60dp"
            android:text="@string/about_app"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/tv_feedback" />

        <com.xing.mita.movie.view.IconFontView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:text="&#xe602;"
            android:textColor="@color/color_66"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_about"
            app:layout_constraintStart_toStartOf="@id/tv_about"
            app:layout_constraintTop_toTopOf="@id/tv_about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/color_99"
            android:text="To be continued"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>