<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/iv_source"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:src="@mipmap/icon_logo_aaqq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_home"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_source"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll"
        app:tabBackground="@null"
        app:tabIndicatorHeight="0dp"
        app:tabMode="scrollable" />

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/tab_newest"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_score"
        app:layout_constraintEnd_toStartOf="@id/tv_order_hits" />

    <TextView
        android:id="@+id/tv_order_hits"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/tab_hits"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_score"
        app:layout_constraintEnd_toStartOf="@id/tv_order_score" />

    <TextView
        android:id="@+id/tv_order_score"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/tab_score"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ts_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ts_search" />

    <View
        android:id="@+id/v_cover"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:background="@drawable/shape_order_cover"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tv_order_time"
        app:layout_constraintTop_toTopOf="@id/tv_order_time" />

    <com.xing.mita.movie.view.IconFontView
        android:id="@+id/ifv_history"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="&#xe603;"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/ts_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ts_search" />

    <com.xing.mita.movie.view.IconFontView
        android:id="@+id/ifv_collect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="&#xe61b;"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/ts_search"
        app:layout_constraintEnd_toStartOf="@id/ifv_history"
        app:layout_constraintTop_toTopOf="@id/ts_search" />

    <com.xing.mita.movie.view.IconFontView
        android:id="@+id/ifv_download"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="&#xe62e;"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/ts_search"
        app:layout_constraintEnd_toStartOf="@id/ifv_collect"
        app:layout_constraintTop_toTopOf="@id/ts_search" />

    <com.xing.mita.movie.view.IconFontView
        android:id="@+id/ifv_search"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="12dp"
        android:text="&#xe62d;"
        android:textColor="@color/colorPrimary"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@id/ts_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ts_search" />

    <TextSwitcher
        android:id="@+id/ts_search"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/ifv_search"
        app:layout_constraintTop_toBottomOf="@id/tl_home" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ts_search" />

</android.support.constraint.ConstraintLayout>